--- a/LFIMS/App.config
+++ b/LFIMS/App.config
@@ -3,7 +3,7 @@
 	<!-- Connection String for LFIMS MySQL Database -->
 	<connectionStrings>
 		<add name="MyDbConnection"
-			 connectionString="server=localhost;port=3306;database=lostandfoundv2;uid=root;pwd=;"
+			 connectionString="server=localhost;port=3306;database=lostandfoundv;uid=root;pwd=;"
 			 providerName="MySql.Data.MySqlClient"/>
 	</connectionStrings>
 
